# soundbar-keeper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEIA-ME-PRIMEIRO.txt  LICENSE  PhilipsTAB4000KeepAliveV9.iss  PhilipsTAB4000KeepAliveV9.spec  README.md  README_INSTALACAO.txt  README_TECNICO.md  build_v9.ps1  config.example.json  desinstalar_v8_ultraburst.bat  instalar_v8_ultraburst.bat  philips_tab4000_keepalive_v9.py  pyproject.toml  requirements.txt  soundbar_keeper_v8.py
docs/: architecture.md
installer/: install.bat  uninstall.bat
src/soundbar_keeper/: __init__.py  audio.py  config.py  devices.py  logger.py  main.py  resources.py  tray.py  windows.py
